Fix: Add overflow auto in image-bg css class to fix the image overflow issue in modal

--- a/public/global.css
+++ b/public/global.css
@@ -293,6 +293,7 @@ nav {
 	max-width: 100%;
 	max-height: 600px;
 	border-radius: 10px;
+	overflow: auto;
 }
 
 .outbound-cont {
